# kresko

./: CLAUDE.md  Cargo.toml  Cross.toml  Makefile  README.md
scripts/: build-ubuntu.sh  network_diag.sh  node_init.sh  vars.sh
src/: config.rs  main.rs  s3.rs  ssh.rs  tmux.rs  zebra_config.rs
src/cloud/: digitalocean.rs  google_cloud.rs  mod.rs
src/commands/: add.rs  check.rs  deploy.rs  down.rs  download.rs  download_heights.rs  genesis.rs  init.rs  init_env.rs  kill_session.rs  list.rs  mine.rs  mod.rs  progress.rs  reset.rs  start_miners.rs  status.rs  txblast.rs  up.rs  upload_data.rs
src/txblast/: mod.rs  rpc.rs  shielded.rs  transparent.rs
