[package]
name = "kresko"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
aws-config = "1"
aws-sdk-s3 = "1"
aws-smithy-types = "1"
base64 = "0.22"
clap = { version = "4", features = ["derive"] }
dotenvy = "0.15"
futures = "0.3"
rand = "0.9"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
toml = "0.8"
