[package]
name = "kresko"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
aws-config = "1"
aws-sdk-s3 = "1"
aws-smithy-types = "1"
base64 = "0.22"
clap = { version = "4", features = ["derive"] }
dotenvy = "0.15"
futures = "0.3"
rand = "0.9"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
hex = "0.4"
secp256k1 = "0.29"
tokio = { version = "1", features = ["full"] }
toml = "0.8"
chrono = { version = "0.4", default-features = false }
zebra-chain = { path = "../zebra/zebra-chain", features = ["internal-miner"] }
zcash_primitives = { version = "0.26", features = ["transparent-inputs"] }
zcash_protocol = "0.7"
zcash_transparent = "0.6"
orchard = "0.11"
sapling-crypto = "0.5"
incrementalmerkletree = "0.8"
jubjub = "0.10"
bls12_381 = "0.8"
rand_core_06 = { package = "rand_core", version = "0.6" }
